# ic_grpc

./: Cargo.toml  README.md  dfx.json
src/ic_grpc_backend/: Cargo.toml
src/ic_grpc_backend/src/: lib.rs  types.rs
