[package]
name = "ic_grpc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = "1"
serde_bytes = "0.11"
serde_json = "1.0"
serde_with = { version = "1.9.4", features = ["json"] } 